Bug 1003505 - Fix printing of SVG images so that they're no longer pixelated. r=seth